# fastapi_crud

./: .env  .env.test  .gitignore  Dockerfile  DockerfileTest  README.md  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml
apps/: di_container.py
apps/item/: apis.py  models.py  repositories.py  schemas.py  usecases.py
config/: database.py  settings.py
sql/: create_item.sql
tests/: conftest.py
tests/apis/: test_create_item.py  test_delete_item.py  test_read_item.py  test_update_item.py
